# Orange-Button-ChecklistRegistry

./: .dockerignore  .gitignore  README.rst  pyproject.toml  start.sh
checklist/: settings.py  urls.py
ob_taxonomy/: generate_models.py  models.py  upload_taxonomy.ipynb
server/: ExampleChecklist.csv  ExampleChecklistAnswerOptions.csv  generate_models.py  models.py  upload_checklist.ipynb  urls.py  urls_maintainer.py  views.py
server/checklist_upserts/BluBanyan/: AnswerOptionGroups.2026-02-11.csv  ChecklistTemplateQuestions.2026-02-11.csv  upsert.ipynb
server/checklist_upserts/EcogyEnergy/: ChecklistTemplateQuestions.2026-02-11.csv  upsert.ipynb
server/checklist_upserts/Ecosuite.io/: upsert.ipynb
server/migrations/: 0001_initial.py
server/static/server/css/: base.css
server/templates/server/: base.html  checklist_detail.html  how_to_contribute.html  maintainer_detail.html  maintainer_list.html
terraform/: bastion.tf  database.tf  dns.tf  ecr.tf  ecs_service.tf  https_cert.tf  load_balancer.tf  main.tf  security_groups.tf  variables.tf  vpc.tf
